@startuml

package "org.example.inmobiliaria" {

    class Casa {
        - String direccion
        - ArrayList<Habitacion> listaHabitaciones
        - Propietario propietario

        + void crearHabitacion(String nombre, double metros)
        + void eliminarHabitacion(String nombre)
        + void mostrarHabitaciones()
        + Habitacion habitacionMasGrande()
        + void mostrarConsumoMayor()
        + double calcularConsumoGeneral()
    }

    class Habitacion {
        - String nombre
        - double metros
        - ArrayList<Electrodomestico> listaElectrodomesticos

        + void crearElectrodomestico(String nombre, double consumo)
        + void eliminarElectrodomestico(String nombre)
        + void mostrarElectrodomesticos()
        + double calcularConsumo()
    }

    class Electrodomestico {
        - String nombre
        - double consumo
    }

    class Propietario {
        - String nombre
        - int edad
    }

    Casa "1" *-- "many" Habitacion : contiene >
    Habitacion "1" *-- "many" Electrodomestico : incluye >
    Casa "1" --> "1" Propietario : pertenece a >
}

@enduml